--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -21,10 +21,10 @@
 		</li>
 		
 		<li id="nav-buyorder-owner">
-			<a href="/buyorder/owner/{{ me.key.id() }}/" title="Manage my orders">
+			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
 				<span class="ss-label">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/view_list-128.png" />
-				Inventory
+				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
+				Categories
 				</span>
 			</a>
 		</li>
