--- a/template/BrowseBuyOrderByOwner.html
+++ b/template/BrowseBuyOrderByOwner.html
@@ -1,29 +1,24 @@
-{% extends "/template/base.html" %}
+{% extends "/template/OrderBase.html" %}
 
 {% block customJS %}
 	<script type="text/javascript">
 		j$(document).ready(function(){
 			// show level 2 navigation pane
 			j$('.level-2-navigation').show();
+			j$('#nav-buyorder-owner').addClass('level-2-navigation-selected');
 		});
 	</script>
-{% endblock %}
-
-{% block level_2_navigation %}
-	<h3>Categories</h3>
-	<div>	
-		<ul>
-		{% for k in cats %}
-			<li><a href="#tab-{{ loop.index }}">{{ k|title }}</a></li>			
-		{% endfor %}
-		<ul>
-	</div>
 {% endblock %}
 
 {% block main %}
 	{% if owner %}
 	<div class="border-bottom">
-		<h1>{{ owner.get().nickname }}</h1>	
+		<h3>Categories</h3>
+		<ul class="tags">
+		{% for k in cats %}
+			<li><a href="#tab-{{ loop.index }}">{{ k|title }}</a></li>			
+		{% endfor %}
+		<ul>
 	</div>
 	
 	<div class="list-of-category-section">
