--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -28,5 +28,14 @@
 				</span>
 			</a>
 		</li>
+
+		<li id="nav-cart-review">
+			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
+				<span class="ss-label">
+				<img src="http://cdn3.iconfinder.com/data/icons/glyph/227/Tag-128.png" />
+				Place Order
+				</span>
+			</a>
+		</li>
 	</ul>
 {% endblock %}
