--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -267,9 +267,9 @@
 {% block main %}
 <form id="myForm" action="/buyorder/new" method="post"> 
 
-<h1 class="ariel-blue">Create a new order</h1>
+<h1 class="ariel-blue">Create a New Order</h1>
 <p class="ariel-blue ariel-p">
-Before you create your listing, tell us what you're selling and we'll help you choose
+Tell us what you are selling and we will help you choose
 the right category so buyers can find your item easily. We'll also look for similar
 items to give you a starting point for your listing.
 </p>
