--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -2,29 +2,12 @@
 
 {% block level_2_navigation %}
 	<ul>
+		{% if me.can_be_nur() %}
 		<li id="nav-buyorder-browse">
 			<a href="/buyorder/browse" title="Browse and shop">
 				<span class="ss-label">
 				<img src="http://cdn4.iconfinder.com/data/icons/devine_icons/128/PNG/Folder%20and%20Places/Stack.png" />
 				Shopping
-				</span>
-			</a>
-		</li>
-		
-		<li id="nav-buyorder-post">
-			<a href="/buyorder/new" title="Post a new order">
-				<span class="ss-label">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/57/compose-128.png" />
-				Post new
-				</span>
-			</a>
-		</li>
-		
-		<li id="nav-buyorder-owner">
-			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
-				<span class="ss-label">
-				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
-				Categories
 				</span>
 			</a>
 		</li>
@@ -36,6 +19,30 @@
 				Place Order
 				</span>
 			</a>
+		</li>		
+
+		<li id="nav-buyorder-owner">
+			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
+				<span class="ss-label">
+				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
+				Categories
+				</span>
+			</a>
 		</li>
+
+		{% endif %}
+		
+		{% if me.can_be_doc() %}
+		<li id="nav-buyorder-post">
+			<a href="/buyorder/new" title="Post a new order">
+				<span class="ss-label">
+				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/57/compose-128.png" />
+				Post New
+				</span>
+			</a>
+		</li>
+		{% endif %}
+		
+
 	</ul>
 {% endblock %}
