--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -7,7 +7,7 @@ body{
 }
 
 h1,h2,h3,h4,h5{
-	font-family: Lato, "Times New Roman", Times, sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
 }
 
 /* Main layout */
