--- a/template/ManageBuyOrder.html
+++ b/template/ManageBuyOrder.html
@@ -2,119 +2,22 @@
 
 {% block customJS %}
 <script type="text/javascript">
-    function showMsg(title, msg){
-        j$('#dialog-message').attr(
-            'title',title
-        ).html(msg);
-        
-        j$( "#dialog-message" ).dialog({
-            modal: true
-        });    
-    }
-    
-    function showBlock(){
-        j$.blockUI({ css: { 
-            border: 'none', 
-            padding: '15px', 
-            backgroundColor: '#000', 
-            '-webkit-border-radius': '10px', 
-            '-moz-border-radius': '10px', 
-            opacity: .5, 
-            color: '#fff' 
-        } });     
-    }
-    
-    function variableToName (aa){
-        // Custom variable is in form of "Name__c", we are to remove
-        // the double underlines and the trailing "c", and return the "Name".
-        var tmp;
-        if (aa.search('__') > 0) // Not a custom object
-            tmp = aa.slice(0,aa.length-3);
-        else
-            tmp = aa;
-        return tmp.replace(/_/gi,' ').toUpperCase();
-    }
-
-
     j$(document).ready(function(){	
-		// Using custom configuration
-		j$("#feature-carousel").carouFredSel({
-			items				: 4,// somehow, this is the MAX I can get this working on my laptop
-			responsive			: true,
-			pagination			:{
-				container		: '#feature-carousel-pagination',
-				keys			: true,
-				items			: 4
-			},
-			scroll : {
-				items			: 1,
-				easing			: "quadratic",
-				duration		: 1000,							
-				pauseOnHover	: "immediate-resume"
-			},
-			prev :{
-				button			: j$('#featured-carousel-prev')
-			},
-			next :{
-				button			: j$('#featured-carousel-next')
-			}								
-		});
-		
-		j$('#command-center-tabs').tabs({
-			collapsible: true,
-			heightStyle: "content",
-			show: {
-				effect: "Drop", 
-				duration: 800,
-				delay: 500 
-			} 
-		});
-		
-		j$('#table-carts').dataTable({
-			//"sScrollY": "400px",
-			"sDom": "frtiS",
-			"bFilter":false,
-			"bPaginate":false,
-			"bInfo":false,
-			"bDeferRender": true
-		});
+		j$('.level-2-navigation').show();
+		j$('#nav-cart-manage').addClass('level-2-navigation-selected');
     });
     
 </script>  
 {% endblock %}
 
 {% block main %}
-<h1>Welcome back, {{ me.key.get().nickname }}!</h1>
- 
-<table width="100%">
-<tr>
-<td width="50px">
-<img src="/static/img/back-button-icon.png" style="z-index:999;width:50px;height:100px;" id="featured-carousel-prev" />
-</td><td>
-<div id="feature-carousel">
-	{% for item in orders %}
-    	<span class="featured-container">
-    	<a href="">
-		<img src={{ item.image }} />
-		<br />
-		{{ item.name }}
-		</a>
-		</span>
-	{% endfor %}
-</div>
-</td><td width="50px">
-<img src="/static/img/next-button-icon.png" style="z-index:999;width:50px;height:100px;" id="featured-carousel-next" />
-</td>
-</tr>
-<tr>
-<td></td><td>
-<div id="feature-carousel-pagination"></div>
-</td><td>
-<a class="see-more" href="{{ browse_url }}">More...</a>
-</td>
-</tr>
-</table>
-
+	<div class="border-bottom">
+	<h1 class="ariel-blue">Manage Carts</h1>
+	<p class="ariel-blue ariel-p">
+		You can review and manage shopping orders that have been placed by you (as a seller) and ones that need your approval (as a buyer).
+	</p>
+	</div>
+	
 <div class="quick-pane">
 <h3>My Shopping Carts</h3>
 <table class="table-row-border" id="table-carts">
