--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1838,3 +1838,28 @@ table.two-col-table input{
 	color:#777777;
 	margin-top:10px;
 }
+
+.shopping-cart-pane{
+	background: #ffffcc; 
+	position:fixed;
+	top:50px;
+	right:0;
+	border-radius: 0 0 10px 10px;
+	border: 1px #888 solid;
+	padding: 20px;
+	z-index:999;
+	width:540px;
+}
+.ss-select, .ss-select option{
+	background-color:#888;
+	color:white;
+	border:none;
+	width:500px;
+	height: 40px;
+	border-radius: 5px;
+	webkit-border-radius: 5px;
+	moz-border-radius:5px;
+	padding: 5px 0 10px 10px;
+	font-size:1.4em;
+}
+
