--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -184,7 +184,10 @@
 		<div>
 		<label class="ss-label">Tracking Number</label>
 		<br />
+		{#
 		<input class="ss-input" type="text" name="shipping-tracking" id="input-tracking-number" placeholder="eg. 013840222514114"/>
+		#}
+		<textarea class="ss-textarea" id="input-tracking-number"></textarea>
 		</div>
 
 		<table class="two-col-table">
